test(review): T-PERM-083 claude 外评处置——P3×2 全核实成立全采纳直修
- P3-1：computeRoleMutex 返回集 Set.copyOf 换 Collections.unmodifiableSet(LinkedHashSet)
  ——SetN 迭代起点按 JVM 级随机盐旋转，下游 allEntries 按角色迭代序拼接进响应数组/
  分页切片，跨重启顺序漂移；恢复旧 HashSet 跨运行确定序＋补 keptRoleIds 不可变行为锁
- P3-2：同轮术语清扫三处——验收句 computeMutexContext 补现名括注、「通知无重复」
  限定口径（角色对 1h/批量 (组,ruleId)/单条 PERM_MUTEX 存量逐次）、interface+impl
  「内部复用 computePermMutex」改「共用同一计算体 computePermMutexInternal」
- 处置后定向单测 25/25 绿；registry 2026-09-26 处置定案行＋任务卡处置段